using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
namespace level5
{
    public class AnimationStrings
    {
        internal static string isMoving = "isMoving";
        internal static string isGrounded = "isGrounded";
        internal static string yVelocity = "yVelocity";
        internal static string jump = "jump";
        internal static string isOnWall = "isOnWall";
        internal static string isOnCelling = "isOnCelling";
        internal static string attack = "attack";
        internal static string canMove = "canMove";
        internal static string hasTarget = "hasTarget";
        internal static string isAlive = "isAlive";
        internal static string isHit = "isHit";
        internal static string hitTrigger = "hit";
        internal static string lockVelocity = "lockVelocity";
        internal static string attackCooldown = "attackCooldown";
        internal static string wallSliding = "wallSliding";
        internal static string isWallSliding = "isWallSliding";
        internal static string wallJump = "wallJump";
        internal static string dash = "dash";
        internal static string bossattack1 = "bossattack1";
        internal static string bossattack2 = "bossattack2";
        internal static string healTrigger = "healtrigger";
    }
}
